[gd_scene load_steps=5 format=3 uid="uid://1bdnhj5aq8k0"]

[ext_resource type="Script" path="res://scripts/lesson_1.gd" id="1_20nk3"]
[ext_resource type="Texture2D" uid="uid://ctnsctaaqiq66" path="res://Next Square Button.png" id="2_jkbr3"]
[ext_resource type="Texture2D" uid="uid://cawhejr4ljidh" path="res://Back Square Button.png" id="3_lt8sm"]
[ext_resource type="Texture2D" uid="uid://c3cfux6ae3e2c" path="res://X Square Button.png" id="4_3nhmj"]

[node name="Lesson1" type="Node2D"]
script = ExtResource("1_20nk3")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1317.0
offset_bottom = 650.0
expand_mode = 2

[node name="next_page" type="Button" parent="."]
offset_left = 1140.0
offset_top = 532.0
offset_right = 1243.0
offset_bottom = 635.0
icon = ExtResource("2_jkbr3")
flat = true
expand_icon = true

[node name="previous_page" type="Button" parent="."]
offset_left = 24.0
offset_top = 536.0
offset_right = 121.0
offset_bottom = 639.0
icon = ExtResource("3_lt8sm")
flat = true
expand_icon = true

[node name="exit" type="Button" parent="."]
offset_left = 1201.0
offset_top = 19.0
offset_right = 1241.0
offset_bottom = 59.0
icon = ExtResource("4_3nhmj")
flat = true
expand_icon = true

[connection signal="pressed" from="next_page" to="." method="_on_next_page_pressed"]
[connection signal="pressed" from="previous_page" to="." method="_on_previous_page_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
